--- a/src/index.css
+++ b/src/index.css
@@ -735,10 +735,22 @@ input {
 .p-mod > * {
   margin: 0;
 }
-.p-mod__version {
+.p-mod__logs {
+  padding: 0.2em 1em;
+  border-radius: 1em;
+  background: var(--green);
+  color: var(--white);
+}
+.p-mod__logs:hover {
+  opacity: 0.8;
+}
+.p-mod__logs, .p-mod__version {
   grid-row: 1 / span 2;
   grid-column: 2;
   align-self: center;
+}
+.p-mod__logs + .p-mod__version {
+  grid-column: 3;
 }
 
 .p-stations {
