--- a/src/index.css
+++ b/src/index.css
@@ -1504,12 +1504,16 @@ html:lang(en) .p-result__type {
 }
 .p-gap-choice,
 .p-nazrin-result,
-.p-shop-card-service {
+.p-shop-card-service__inner {
   display: flex;
   align-items: flex-start;
   column-gap: 0.5em;
 }
 .p-shop-card-service {
+  display: flex;
+  flex-direction: column;
+}
+.p-shop-card-service__inner {
   align-items: center;
 }
 .p-dialogue__option--invalid,
