--- a/src/index.css
+++ b/src/index.css
@@ -657,11 +657,15 @@ input {
 
 .c-map-icon {
   position: fixed;
+}
+.c-map-icon,
+.p-station__head .c-map-icon__boss-text {
   width: var(--icon-size);
   height: var(--icon-size);
 }
 
-.c-map-icon--boss, .c-map-icon__boss-text {
+.c-map-icon--boss,
+.c-map-icon .c-map-icon__boss-text {
   width: calc(var(--icon-size) * 2);
   height: calc(var(--icon-size) * 2);
 }
@@ -671,10 +675,11 @@ input {
   bottom: 0;
   right: 0;
 }
-.c-map-icon__img, .c-map-icon__boss-text {
+.c-map-icon__img,
+.c-map-icon .c-map-icon__boss-text {
   position: absolute;
 }
-.c-map-icon__boss-text {
+.c-map-icon .c-map-icon__boss-text {
   overflow-wrap: anywhere;
   color: var(--f-white);
   line-height: 1em;
