--- a/src/index.css
+++ b/src/index.css
@@ -247,9 +247,6 @@ input {
   margin: 0;
 }
 
-.p-run-list__pager {
-  margin: 0 auto;
-}
 .p-pager {
   display: flex;
   list-style: none;
@@ -2321,6 +2318,9 @@ html:lang(en) .p-result__type {
   .p-run-list__pager {
     order: 2;
     margin-top: 1em;
+    flex-basis: 100%;
+    display: flex;
+    justify-content: center;
   }
 
   .p-modal__outer {
