WIP: add Patchouli

--- a/src/index.css
+++ b/src/index.css
@@ -1822,6 +1822,9 @@ html:lang(en) .p-result__type {
   color: var(--f-koishi);
 }
 
+.c-character-short-name--PatchouliMod {
+  color: var(--f-patchouli);
+}
 .c-character-short-name--Sanae_Kochiya {
   color: var(--f-sanae);
 }
@@ -2201,6 +2204,7 @@ html:lang(en) .p-result__type {
   --f-cirno: #0f94f2;
   --f-koishi: #23ec4d;
 
+  --f-patchouli: #d2c5df;
   --f-sanae: #28e25a;
   --f-utsuho: #e58c27;
   --f-youmu: #00b789;
