--- a/src/index.css
+++ b/src/index.css
@@ -772,9 +772,11 @@ input {
 }
 
 .p-mods {
+  flex: 1;
+}
+.p-mods__inner {
   display: flex;
   flex-wrap: wrap;
-  flex: 1;
   gap: 0.2em 0.5em;
   align-content: flex-start;
 }
@@ -783,6 +785,23 @@ input {
   display: grid;
   justify-content: space-between;
 }
+.p-mod--collapsed {
+  display: none;
+}
+.p-mods .p-mods__button {
+  width: 100%;
+  margin: 0.5em 0;
+  position: relative;
+}
+.p-mods__button--collapsed:before {
+  content: '';
+  position: absolute;
+  bottom: 100%;
+  width: 100%;
+  height: 2.75em;
+  background: linear-gradient(transparent, var(--white));
+}
+
 .p-mod__guid {
   font-size: 8px;
 }
@@ -1487,7 +1506,7 @@ html:lang(en) .p-result__type {
 .p-upload__buttons {
   column-gap: 1em;
 }
-.p-filter__button, .p-upload__button {
+.p-filter__button, .p-upload__button, .p-mods__button {
   --color: var(--green);
   font-weight: bold;
   border-radius: 2em;
@@ -1508,7 +1527,7 @@ html:lang(en) .p-result__type {
 .p-upload__button {
   width: 8em;
 }
-.p-filter__button--apply, .p-upload__button--upload {
+.p-filter__button--apply, .p-upload__button--upload, .p-mods__button {
   background: var(--color);
   color: var(--white);
 }
