--- a/src/index.css
+++ b/src/index.css
@@ -241,10 +241,12 @@ input {
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
-  margin-bottom: 1em;
 }
 .p-run-list__results, .p-run-list__remark {
   margin: 0;
+}
+.p-run-list__pager {
+  margin: 0 auto;
 }
 
 .p-pager {
@@ -277,7 +279,7 @@ input {
 .p-run-list__table {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 1em auto;
 }
 .p-run-list__header, .p-run-list__body {
   display: flex;
