--- a/src/index.css
+++ b/src/index.css
@@ -942,48 +942,6 @@ input {
   color: var(--red);
 }
 
-.p-share {
-  --padding: calc(var(--icon-size) * 2);
-  position: fixed;
-  bottom: calc(var(--control-height) + var(--padding));
-  right: var(--padding);
-  padding: 1em;
-  background: var(--light-orange);
-  border-radius: 50%;
-  cursor: pointer;
-  z-index: var(--z-4);
-}
-.c-share__url {
-  width: 100%;
-  border: 1px solid var(--black);
-  white-space: nowrap;
-  overflow: hidden;
-  display: flex;
-  justify-content: flex-end;
-}
-.c-share__buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  column-gap: 1em;
-  margin: 1em 0;
-}
-.c-share__button {
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: var(--icon-size);
-  height: var(--icon-size);
-}
-.c-share__svg {
-  height: 24px;
-  width: auto;
-}
-.c-share__svg path {
-  fill: var(--black);
-}
-
 .p-control {
   position: fixed;
   bottom: 0;
@@ -1939,8 +1897,7 @@ html:lang(en) .p-result__type {
 .p-modal__inner--exhibit,
 .p-modal__inner--status-effect,
 .p-modal__inner--request,
-.p-modal__inner--jade-box,
-.p-modal__inner--share {
+.p-modal__inner--jade-box {
   width: 100%;
   overflow-y: auto;
   scrollbar-width: none;
@@ -1948,9 +1905,6 @@ html:lang(en) .p-result__type {
   color: var(--black);
   color-scheme: dark;
   max-height: 70vh;
-}
-.p-modal__inner--share {
-  color-scheme: initial;
 }
 .p-modal__exhibit .c-exhibit--with-counter,
 .p-modal__status-effect .c-status-effect {
@@ -2379,10 +2333,6 @@ html:lang(en) .p-result__type {
 
   .p-mod {
     flex-basis: 100%;
-  }
-
-  .p-share {
-    --padding: var(--icon-size);
   }
 
   .p-summary {
