--- a/src/index.css
+++ b/src/index.css
@@ -1180,6 +1180,14 @@ html:lang(en) .c-entity__text {
   align-items: center;
   width: calc(var(--icon-size) * 2);
 }
+.p-enemy__img {
+  --shadow-thickness: 1px;
+  ---shadow-thickness: calc(var(--shadow-thickness) * -1);
+  --shadow-color: var(--black);
+  filter:
+    drop-shadow(var(--shadow-thickness) var(--shadow-thickness) 0 var(--shadow-color))
+    drop-shadow(var(---shadow-thickness) var(---shadow-thickness) 0 var(--shadow-color));
+}
 .p-enemy__text {
   font-size: 0.8em;
   text-align: center;
