--- a/src/index.css
+++ b/src/index.css
@@ -1260,10 +1260,10 @@ html:lang(en) .c-entity__text {
 .c-request {
   width: var(--dot-size);
   height: var(--dot-size);
-  outline: var(--dot-border) solid var(--dot-color);
-  outline-offset: calc(var(--dot-border) * -1 );
+  border: var(--dot-border) solid var(--dot-color);
   border-radius: 50%;
   position: relative;
+  box-sizing: border-box;
 }
 .c-request--modal {
   cursor: zoom-in;
@@ -1274,15 +1274,16 @@ html:lang(en) .c-entity__text {
   position: absolute;
   top: 50%;
   left: 100%;
-  width: 100%;
+  width: calc(100% + var(--dot-border) * 2);
   height: 1px;
   background: var(--dot-color);
   transform: translateY(-50%);
+  margin-left: calc(var(--dot-border) * 1);
 }
 
 .c-request__dot {
-  width: 70%;
-  height: 70%;
+  width: 75%;
+  height: 75%;
   border-radius: 50%;
   position: absolute;
   top: 50%;
