fix shining exhibits order

--- a/src/index.css
+++ b/src/index.css
@@ -2380,9 +2380,11 @@ html:lang(en) .p-result__type {
 }
 
 @media screen and (min-width: 601px) {
-  .p-entity--boss-exhibits .c-entity--shining:nth-child(2),
-  .p-entity--boss-exhibits .c-entity--Shining:nth-child(2) {
-    order: 1;
+  .p-entity--boss-exhibits .c-entity--shining:nth-child(1),
+  .p-entity--boss-exhibits .c-entity--shining:nth-child(3),
+  .p-entity--boss-exhibits .c-entity--Shining:nth-child(1),
+  .p-entity--boss-exhibits .c-entity--Shining:nth-child(3) {
+    order: -1;
   }
 
   .u-sp {
