add `lvalonexrumia` color

--- a/src/index.css
+++ b/src/index.css
@@ -1857,6 +1857,9 @@ html:lang(en) .p-result__type {
   color: var(--f-koishi);
 }
 
+.c-character-short-name--lvalonexrumia {
+  color: var(--f-rumia);
+}
 .c-character-short-name--Momiji {
   color: var(--f-momiji);
 }
@@ -2274,6 +2277,7 @@ html:lang(en) .p-result__type {
   --f-cirno: #0f94f2;
   --f-koishi: #23ec4d;
 
+  --f-rumia: #ff0808;
   --f-momiji: #e58c27;
   --f-patchouli: #d2c5df;
   --f-sanae: #28e25a;
